Convert ContainerTopOKResponse from swagger spec.
